--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
                 <div class="banner__template">
                     <h1 class="banner__title">Your Favorite One Page Multi Purpose Template</h1>
                     <p class="banner__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna vel scelerisque nisl consectetur et.</p>
-                    <button class="banner__btn btn">Find Out More</button>
+                    <button class="btn">Find Out More</button>
                 </div>
             </div>
         </section>
