pre-processing corrections

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="background-img__wrapper">
         <header class="header">
-            <div class="header__container container">
+            <div class="header__container">
                 <a href="#" class="header__logo-wrapper">
                     <svg class="header__logo" xmlns="http://www.w3.org/2000/svg" width="184" height="27" viewBox="0 0 184 27" fill="none">
                         <path d="M16.0136 21.0865H7.81939L6.38839 25.7644H0L9.09706 0.723712H14.7188L23.884 25.7644H17.4616L16.0136 21.0865ZM9.25038 16.4257H14.5826L11.908 7.74061L9.25038 16.4257Z" fill="#656980"/>
@@ -43,7 +43,7 @@
             </div>
         </header>
         <section class="banner">
-            <div class="banner__container container">
+            <div class="banner__container">
                 <div class="banner__template">
                     <h1 class="banner__title">Your Favorite One Page Multi Purpose Template</h1>
                     <p class="banner__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna vel scelerisque nisl consectetur et.</p>
