--- a/src/index.html
+++ b/src/index.html
@@ -106,5 +106,6 @@
                 </div>
             </div>
         </div>
+        <script src="/src/assets/scripts/script.js"></script>
 </body>
 </html>
